@@ -1,4 +1,5 @@
 0.05
+ - Add tests for type() method.
  - Fix list of dependencies in doc.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
